--- a/LambdaForum/Views/Forum/Index.cshtml
+++ b/LambdaForum/Views/Forum/Index.cshtml
@@ -1,7 +1,23 @@
-﻿
+﻿@model LambdaForum.Models.Forum.ForumIndexModel
+
 @{
-    ViewData["Title"] = "Index";
+    
 }
+<h1>Forums</h1>
 
-<h1>Index</h1>
+<table class="table table-hover" id="forumIndexTable">
 
+    <tbody>
+        @foreach(var forum in Model.ForumList)
+        {
+            <tr>
+                <td>
+                    <a asp-controller="Forum" asp-action="Topic" asp-route-id="@forum.Id">
+                    @forum.Name
+                    </a>
+                </td>
+                <td>@forum.Description</td>
+            </tr>
+        }
+    </tbody>
+</table>
