--- a/LambdaForum/Views/Shared/_Layout.cshtml
+++ b/LambdaForum/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
               />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true"/>
     </environment>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet"/>
+    <link href="https://fonts.googleapsi.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 <body>
     <header>
