--- a/LambdaForum/wwwroot/css/site.css
+++ b/LambdaForum/wwwroot/css/site.css
@@ -60,7 +60,10 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+ padding:50px 0 20px 0;
+ background-color:#eee;
+ background-image: url("/images/theme/bg-01.png");
+
 }
 .footer {
   position: absolute;
